--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -36,14 +36,18 @@ ignore_rows = 0.3
 
 #if T produced B&W printer friendly output
 B&W = F
+
+#set to py for python
+plot_ext = py
+
 #version of MatLab you are using
 #matlab_version = 7
 
-matlab_subplot_size_inch = 4.0
-matlab_subplot_size_inch2 = 4.0
-matlab_subplot_size_inch3 = 6.0
+subplot_size_inch = 4.0
+subplot_size_inch2 = 4.0
+subplot_size_inch3 = 6.0
 
-matlab_plot_output = pdf
+plot_output = pdf
 
 line_labels = T
 
@@ -76,6 +80,9 @@ num_contours = 3
 contour1 = 0.68
 contour2 = 0.95
 contour3 = 0.99
+
+#limit to use for split test and Raftery-Lewis convergence diagonostics
+converge_test_limit=0.95
 
 #If the distribution is skewed, so two probability of tails differs by more than credible_interval_threshold
 #of the peak value, use equal-probability limits rather than integrating inwards equally at both tails
