fix output of python param bounds when plot_params set

--- a/batch1/getdist_common_batch1.ini
+++ b/batch1/getdist_common_batch1.ini
@@ -115,7 +115,7 @@ triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r 
 matlab_colscheme =
 
 #Parameters to use. If unspecified use all parameters which have labels.
-#plot_params = omegabh2 omegadmh2 tau ns
+#plot_params = omegabh2 omegach2 tau ns
 
 #marker[x] adds vertical line to MatLab 1D plot
 marker[nrun] = 0
