--- a/distparams.ini
+++ b/distparams.ini
@@ -104,7 +104,7 @@ triangle_params = omegabh2 omegach2 tau omegak mnu nnu yhe Alens ns nrun logA r 
 matlab_colscheme =
 
 #Parameters to use. If not specified use all parameters which have lables.
-#plot_params = omegabh2 omegadmh2 tau ns
+#plot_params = omegabh2 omegach2 tau ns
 
 #Get set label to empty to not include a parameter in the parameter_names file
 #lab[asz]=
