--- a/batch1/nonclik.ini
+++ b/batch1/nonclik.ini
@@ -2,11 +2,14 @@ use_CAMspec=T
 camspec_beam_mcmc_num=1
 
 
+#pre_marged=T
+#margelikefile=%DATASETDIR%camspec/like_v6.2TNdust_beam_marged
+#marge_modes = %DATASETDIR%camspec/like_v6.2TNdust_conditionals
+
+pre_marged=F
 likefile = %DATASETDIR%camspec/like_v6.2TNdust
 beamfile = %DATASETDIR%camspec/beamfile_v6.2TN.dat
 
-#likefile= %DATASETDIR%camspec/like_217lmin1000_v6.2TNdust
-#beamfile = %DATASETDIR%camspec/beamfile_v6.2TN_v53h.dat
 
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
