--- a/batch1/BAO.ini
+++ b/batch1/BAO.ini
@@ -8,3 +8,4 @@ bao_numdatasets = 3
 bao_dataset1 = data/sdss_DR9_bao.dataset
 bao_dataset2 = data/sdss_DR7_bao.dataset
 bao_dataset3 = data/sdss_6DF_bao.dataset
+bao_dataset4 = data/wigglez_bao.dataset
