--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -10,6 +10,7 @@ use_clusters = F
 use_min_zre = 0
 
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
+#note lyman-alpha (lya) code assumes linear spectrum
 nonlinear_pk = F
 
 use_Age_Tophat_Prior = T
