Added README and changed MPK.ini

--- a/batch1/MPK.ini
+++ b/batch1/MPK.ini
@@ -1,12 +1,11 @@
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
-nonlinear_pk = F
+nonlinear_pk = T
 
 use_mpk = T
 
 #filenames for matter power spectrum datasets, incl twodf
 mpk_numdatasets = 0
 mpk_dataset1 = data/sdss_lrgDR4.dataset
-mpk_dataset1 = data/2df_2005.dataset
 
 #If use_wigglez_mpk = T must also set use_mpk = T
 use_wigglez_mpk = T
