--- a/camb/params.ini
+++ b/camb/params.ini
@@ -13,7 +13,8 @@ get_transfer   = F
 #where p is the projected potential. Output lensed CMB Cls (without tensors) are in lensed_output_file below.
 do_lensing     = T
 
-# 0: linear, 1: non-linear matter power (HALOFIT), 2: non-linear CMB lensing (HALOFIT)
+# 0: linear, 1: non-linear matter power (HALOFIT), 2: non-linear CMB lensing (HALOFIT), 
+# 3: both non-linear matter power and CMB lensing (HALOFIT) 
 do_nonlinear = 0
 
 #Maximum multipole and k*eta. 
