change to Params pass around/memory deallocation

--- a/batch1/common_batch1.ini
+++ b/batch1/common_batch1.ini
@@ -103,12 +103,22 @@ action = 0
 estimate_propose_matrix = F
 
 #when estimating best fit point (action=2 or estimate_propose_matrix), 
-#required relative accuracy of each parameter in units of the propose width
-max_like_radius = 0.002
-max_like_iterations = 40000
+#required relative accuracy of each parameter in units of the covariance width
+max_like_radius = 0.05
+max_like_iterations = 5000
+minimization_points_factor = 2
+minimize_loglike_tolerance = 0.05
+minimize_separate_fast = T
+#if non-zero do some low temperature MCMC steps to check minimum stable
+minimize_mcmc_refine_num = 20
+minimize_refine_temp = 0.01
+minimize_temp_scale_factor = 5
+minimize_random_start_pos = T
 
-minimization_points_factor = 6
-minimize_loglike_tolerance=0.05
+#max_like_radius = 0.002
+#max_like_iterations = 40000
+#minimization_points_factor = 6
+#minimize_loglike_tolerance=0.05
 
 #if blank this is set from system clock
 rand_seed = 
