--- a/fid.ini
+++ b/fid.ini
@@ -10,7 +10,8 @@
 #DEFAULT(batch1/HST.ini)
 #DEFAULT(batch1/Union.ini)
 #DEFAULT(batch1/SNLS.ini)
-DEFAULT(batch1/MPK.ini)
+DEFAULT(batch1/WiggleZ_MPK.ini)
+#DEFAULT(batch1/MPK.ini)
 
 #general settings
 DEFAULT(batch1/common_fid.ini)
