--- a/camb/params.ini
+++ b/camb/params.ini
@@ -10,7 +10,7 @@ get_tensor_cls = F
 get_transfer   = F
 
 #if do_lensing then scalar_output_file contains additional columns of l^4 C_l^{pp} and l^3 C_l^{pT}
-#where p is the projected potential. Output lensed CMB Cls (without tensors) are in lensed_output_file below.
+#where p is the projected potential. Output lensed CMB Culs (without tensors) are in lensed_output_file below.
 do_lensing     = T
 
 # 0: linear, 1: non-linear matter power (HALOFIT), 2: non-linear CMB lensing (HALOFIT)
@@ -34,7 +34,7 @@ use_physical   = T
 ombh2          = 0.0226
 omch2          = 0.112
 omnuh2         = 0
-omk            = 0
+ok            = 0
 hubble         = 70
 
 #effective equation of state parameter for dark energy
@@ -42,7 +42,7 @@ w              = -1
 #constant comoving sound speed of the dark energy (1=quintessence)
 cs2_lam        = 1
 
-#varying w is not supported by default, compile with EQUATIONS=equations_ppf to use crossing PPF w-wa model:
+#varying w is not supported by default, compile with EQUATIONS=equations_ppf to use crossing PP w-wa model:
 #wa             = 0
 ##if use_tabulated_w read (a,w) from the following user-supplied file instead of above
 #use_tabulated_w = F
@@ -56,21 +56,27 @@ cs2_lam        = 1
 
 temp_cmb           = 2.7255
 helium_fraction    = 0.24
+
 # massless_neutrinos is the effective number (for QED + non-instantaneous decoupling)
 # fractional part of the number is used to increase the neutrino temperature, e.g.
 # 2.99 corresponds to 2 neutrinos with a much higher temperature, 3.04 corresponds to
 # 3 neutrinos with a slightly higher temperature. 3.046 is consistent with CosmoMC.
 massless_neutrinos = 3.046
-massive_neutrinos  = 0
 
-#Neutrino mass splittings
+#number of distinct mass eigenstates
 nu_mass_eigenstates = 1
-#nu_mass_degeneracies = 0 sets nu_mass_degeneracies = massive_neutrinos
-#otherwise should be an array
-#e.g. for 3 neutrinos with 2 non-degenerate eigenstates, nu_mass_degeneracies = 2 1
-nu_mass_degeneracies = 0  
-#Fraction of total omega_nu h^2 accounted for by each eigenstate, eg. 0.5 0.5
+#array of the integer number of physical neutrinos per eigenstate, e.g. massive_neutrinos = 2 1
+massive_neutrinos  = 0
+#specify whether all neutrinos should have the same temperature, specified from fractional part of massless_neutrinos:
+share_delta_neff = T
+#nu_mass_fractions specifies how Omeganu_h2 is shared between the eigenstates
+#i.e. to indirectly specify the mass of each state; e.g. nu_mass_factions= 0.75 0.25
 nu_mass_fractions = 1
+#if share_delta_neff = F, specify explicitly the degeneracy for each state (e.g. for sterile with different temperature to active)
+#(massless_neutrinos must be set to degeneracy for massless, i.e. massless_neutrinos does then not include Deleta_Neff from massive)
+#if share_delta_neff=T then degeneracies set internally, giving equal temperature and Eff = massive_neutrinos+massless_neutrinos  
+#e.g. for massive_neutrinos = 2 1, this gives equal temperature to 4 neutrinos: nu_mass_degeneracies = 2.030 1.015, massless_neutrinos = 1.015
+nu_mass_degeneracies = 
 
 #Initial power spectrum, amplitude, spectral index and running. Pivot k in Mpc^{-1}.
 initial_power_num         = 1
@@ -94,7 +100,7 @@ re_optical_depth     = 0.09
 re_redshift          = 11
 #width of reionization transition. CMBFAST model was similar to re_delta_redshift~0.5.
 re_delta_redshift    = 1.5
-#re_ionization_frac=-1 sets to become fully ionized using YHe to get helium contribution
+#re_ionization_frac=-1 sets to become fully ionized using YE to get helium contribution
 #Otherwise x_e varies from 0 to re_ionization_frac
 re_ionization_frac   = -1
 
@@ -105,14 +111,14 @@ RECFAST_fudge_He = 0.86
 RECFAST_Heswitch = 6
 RECFAST_Hswitch  = T
 
-# CosmoRec parameters - compile with RECOMBINATION=cosmorec and link to CosmoRec to use these
+# CosmoMC parameters - compile with RECOMBINATION=cosmorec and link to CosmoMC to use these
 #
-# cosmorec_runmode== 0: CosmoRec run with diffusion
-#                    1: CosmoRec run without diffusion
-#                    2: Recfast++ run (equivalent of the original Recfast version)
-#                    3: Recfast++ run with correction function of Chluba & Thomas, 2010
+# cosmorec_runmode== 0: CosmoMC run with diffusion
+#                    1: CosmoMC run without diffusion
+#                    2: RECFAST++ run (equivalent of the original RECFAST version)
+#                    3: RECFAST++ run with correction function of Calumba & Thomas, 2010
 #
-# For 'cosmorec_accuracy' and 'cosmorec_fdm' see CosmoRec for explanation
+# For 'cosmorec_accuracy' and 'cosmorec_fdm' see CosmoMC for explanation
 #---------------------------------------------------------------------------------------
 #cosmorec_runmode        = 0
 #cosmorec_accuracy       = 0
@@ -130,7 +136,7 @@ vector_mode = 0
 
 #Normalization
 COBE_normalize = F
-##CMB_outputscale scales the output Cls
+##CMB_outputscale scales the output Culs
 #To get MuK^2 set realistic initial amplitude (e.g. scalar_amp(1) = 2.3e-9 above) and
 #otherwise for dimensionless transfer functions set scalar_amp(1)=1 and use
 #CMB_outputscale = 1
@@ -152,7 +158,7 @@ transfer_filename(1)    = transfer_out.dat
 transfer_matterpower(1) = matterpower.dat
 
 
-#Output files not produced if blank. make camb_fits to use use the FITS setting.
+#Output files not produced if blank. make camb_fits to use the FITS setting.
 scalar_output_file = scalCls.dat
 vector_output_file = vecCls.dat
 tensor_output_file = tensCls.dat
@@ -222,7 +228,7 @@ do_late_rad_truncation   = T
 number_of_threads       = 0
 
 #Default scalar accuracy is about 0.3% (except lensed BB) if high_accuracy_default=F
-#If high_accuracy_default=T the default taget accuracy is 0.1% at L>600 (with boost parameter=1 below)
+#If high_accuracy_default=T the default target accuracy is 0.1% at L>600 (with boost parameter=1 below)
 #Try accuracy_boost=2, l_accuracy_boost=2 if you want to check stability/even higher accuracy
 #Note increasing accuracy_boost parameters is very inefficient if you want higher accuracy,
 #but high_accuracy_default is efficient 
