--- a/source/Makefile
+++ b/source/Makefile
@@ -26,6 +26,7 @@ cfitsio ?=
 PLANCKLIKE ?=
 
 #These is not used in public cosmomc
+NONCLIKLIKE ?=
 highL ?=
 #highL = ../highL
 
@@ -82,6 +83,9 @@ ifneq ($(PLANCKLIKE),)
 FFLAGS += -DCLIK
 endif
 
+ifneq ($(NONCLIKLIKE),)
+FFLAGS += -DNONCLIK
+endif
 ifneq ($(highL),)
 FFLAGS += -DhighL
 LINKFLAGS += -L$(highL) -lhigh
@@ -90,9 +94,16 @@ endif
 
 PLANCKLIKEFILES=
 
+ifeq ($(NONCLIKLIKE),cliklike_CamSpec)
+PLANCKLIKEFILES +=  temp_like.o
+endif
 
 ifneq ($(PLANCKLIKE),)
 PLANCKLIKEFILES += $(PLANCKLIKE).o
+endif
+
+ifneq ($(NONCLIKLIKE),)
+PLANCKLIKEFILES += $(NONCLIKLIKE).o
 endif
 
 
