new setup for the Theory%matter_power arrays

--- a/batch1/WiggleZ_MPK.ini
+++ b/batch1/WiggleZ_MPK.ini
@@ -2,7 +2,7 @@ use_mpk = T
 use_wigglez_mpk = T
 
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
-nonlinear_pk = T
+nonlinear_wigglez = T
 
 #use gigglez corrections; only set Use_gigglez = T if nonlinear_pk = T
 Use_gigglez = T
