TRealList in Initialize_PKSettings; added root_dir input;fix checkpoint with empty .txt, compiler bugs

--- a/test.ini
+++ b/test.ini
@@ -34,7 +34,11 @@ indep_sample=0
 
 use_clik=T
 
-file_root=chains/test
+#Folder where files (chains, checkpoints, etc.) are stored
+root_dir = chains/
+
+#Root name for files produced
+file_root=test
 action = 0
 
 #these are just small speedups for testing
