--- a/test.ini
+++ b/test.ini
@@ -10,8 +10,8 @@ DEFAULT(batch1/BAO.ini)
 #DEFAULT(batch1/HST.ini)
 #DEFAULT(batch1/Union.ini)
 #DEFAULT(batch1/SNLS.ini)
-DEFAULT(batch1/WiggleZ_MPK.ini)
-DEFAULT(batch1/MPK.ini)
+#DEFAULT(batch1/WiggleZ_MPK.ini)
+#DEFAULT(batch1/MPK.ini)
 
 #general settings
 DEFAULT(batch1/common_batch1.ini)
@@ -44,6 +44,6 @@ action = 0
 #these are just small speedups for testing
 get_sigma8=F
 
-#Uncomment this if you don't want 0.06eV neutrino by default
+#Uncomment this if you don't want one 0.06eV neutrino by default
 #num_massive_neutrinos=3
 #param[mnu] = 0 0 0 0 0
