batch2 with 65F likelihood settings

--- a/test.ini
+++ b/test.ini
@@ -1,20 +1,20 @@
-DEFAULT(batch1/CAMspec_defaults.ini)
-DEFAULT(batch1/lowl.ini)
-DEFAULT(batch1/lowLike.ini)
+DEFAULT(batch2/CAMspec_defaults.ini)
+DEFAULT(batch2/lowl.ini)
+DEFAULT(batch2/lowLike.ini)
 
 #planck lensing
-#DEFAULT(batch1/lensing.ini)
+#DEFAULT(batch2/lensing.ini)
 
 #Other Likelihoods
-DEFAULT(batch1/BAO.ini)
-#DEFAULT(batch1/HST.ini)
-#DEFAULT(batch1/Union.ini)
-#DEFAULT(batch1/SNLS.ini)
-#DEFAULT(batch1/WiggleZ_MPK.ini)
-#DEFAULT(batch1/MPK.ini)
+DEFAULT(batch2/BAO.ini)
+#DEFAULT(batch2/HST.ini)
+#DEFAULT(batch2/Union.ini)
+#DEFAULT(batch2/SNLS.ini)
+#DEFAULT(batch2/WiggleZ_MPK.ini)
+#DEFAULT(batch2/MPK.ini)
 
 #general settings
-DEFAULT(batch1/common_batch1.ini)
+DEFAULT(batch2/common.ini)
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
