--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -4,6 +4,7 @@ camspec_beam_mcmc_num=1
 pre_marged=T
 margelikefile=%DATASETDIR%camspec/v52/like_v6.5Fdust_beam_marged
 marge_modes = %DATASETDIR%camspec/v52/like_v6.5Fdust_conditionals
+beamfile = %DATASETDIR%camspec/v52/beamfile_v6.5F.dat
 
 #pre_marged=F
 #likefile = %DATASETDIR%camspec/like_v6.2TNdust
