tidies, CAMB update and python options

--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -2,12 +2,18 @@ use_CMB = T
 use_clik = T
 
 use_HST = F
+use_mpk = F
 use_SN = F
-use_BAO = F
+use_BAO=F
 
 use_lya = F
 use_clusters = F
 use_min_zre = 0
+
+#filenames for matter power spectrum datasets, incl twodf
+mpk_numdatasets = 1
+mpk_dataset1 = %DATASETDIR%sdss_lrgDR4.dataset
+
 
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
 #note lyman-alpha (lya) code assumes linear spectrum
