--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -17,25 +17,33 @@ kszfile = %DATASETDIR%camspec/cl_ksz_148_trac.dat
 clik_data_camspec =
 
 prior[ncib] = 0.7 0.2
-param[cal1]= 1.0 1.0 1.0 0 0
 
-param[bm_1_2]=0 0 0 0 0
-param[bm_1_3]=0 0 0 0 0
-param[bm_1_4]=0 0 0 0 0
-param[bm_1_5]=0 0 0 0 0
-param[bm_2_1]=0 0 0 0 0
-param[bm_2_2]=0 0 0 0 0
-param[bm_2_3]=0 0 0 0 0
-param[bm_2_4]=0 0 0 0 0
-param[bm_2_5]=0 0 0 0 0
-param[bm_3_1]=0 0 0 0 0
-param[bm_3_2]=0 0 0 0 0
-param[bm_3_3]=0 0 0 0 0
-param[bm_3_4]=0 0 0 0 0
-param[bm_3_5]=0 0 0 0 0
-param[bm_4_1]=0 0 0 0 0
-param[bm_4_2]=0 0 0 0 0
-param[bm_4_3]=0 0 0 0 0
-param[bm_4_4]=0 0 0 0 0
-param[bm_4_5]=0 0 0 0 0
+prior[cal0]= 1.0006 0.0004
+prior[cal2]= 0.9966 0.0015
+
+param[cal1]= 1
+param[cibrun]= 0
+
+#set equal to ncib if ncib143<-9
+param[ncib143] = -10
+
+param[bm_1_2]=0
+param[bm_1_3]=0
+param[bm_1_4]=0
+param[bm_1_5]=0
+param[bm_2_1]=0
+param[bm_2_2]=0
+param[bm_2_3]=0
+param[bm_2_4]=0
+param[bm_2_5]=0
+param[bm_3_1]=0
+param[bm_3_2]=0
+param[bm_3_3]=0
+param[bm_3_4]=0
+param[bm_3_5]=0
+param[bm_4_1]=0
+param[bm_4_2]=0
+param[bm_4_3]=0
+param[bm_4_4]=0
+param[bm_4_5]=0
 
