--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -3,12 +3,13 @@ camspec_beam_mcmc_num=1
 
 pre_marged=T
 margelikefile=%DATASETDIR%camspec/v52/like_v6.5Fdust_beam_marged
-marge_modes = %DATASETDIR%camspec/v52/like_v6.5Fdust_conditionals
 beamfile = %DATASETDIR%camspec/v52/beamfile_v6.5F.dat
 
 #pre_marged=F
 #likefile = %DATASETDIR%camspec/like_v6.2TNdust
 #beamfile = %DATASETDIR%camspec/beamfile_v6.2TN.dat
+#camspec_fiducial_cl=%DATASETDIR%/base_planck_lowl_lowLike_highL.bestfit_cl
+#camspec_fiducial_foregrounds=%DATASETDIR%/base_planck_lowl_lowLike_highL.camspec_foregrounds
 
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
