--- a/camspec_make.ini
+++ b/camspec_make.ini
@@ -5,6 +5,8 @@ DEFAULT(batch2/CAMspec_defaults.ini)
 DEFAULT(batch2/common.ini)
 
 make_cov_marged = T
+marge_file_variant = 
+#marge_file_variant = '_fid2'
 
 camspec_fiducial_cl=%DATASETDIR%/base_planck_lowl_lowLike_highL.bestfit_cl
 camspec_fiducial_foregrounds=%DATASETDIR%/base_planck_lowl_lowLike_highL.camspec_foregrounds
