--- a/camspec_make.ini
+++ b/camspec_make.ini
@@ -8,10 +8,12 @@ make_cov_marged = T
 marge_file_variant = 
 #marge_file_variant = '_fid2'
 
-camspec_fiducial_cl=%DATASETDIR%/base_planck_lowl_lowLike_highL.bestfit_cl
-camspec_fiducial_foregrounds=%DATASETDIR%/base_planck_lowl_lowLike_highL.camspec_foregrounds
-likefile = %DATASETDIR%camspec/like_v6.2TNdust
-beamfile = %DATASETDIR%camspec/beamfile_v6.2TN.dat
+camspec_fiducial_cl=%DATASETDIR%/base_v65F_lowl_lowLike_highL.bestfit_cl
+camspec_fiducial_foregrounds=%DATASETDIR%/base_v65F_lowl_lowLike_highL.camspec_foregrounds
+
+
+likefile= %DATASETDIR%camspec/like_v6.5Fdust
+beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
 #Folder where files (chains, checkpoints, etc.) are stored
 root_dir = chains/
