--- a/batch2/nonclik.ini
+++ b/batch2/nonclik.ini
@@ -2,14 +2,13 @@ use_CAMspec=T
 camspec_beam_mcmc_num=1
 
 pre_marged=T
-margelikefile=%DATASETDIR%camspec/v52/like_v6.5Fdust_beam_marged
-beamfile = %DATASETDIR%camspec/v52/beamfile_v6.5F.dat
+margelikefile=%DATASETDIR%camspec/like_v6.5Fdust_beam_marged
+beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
 #pre_marged=F
-#likefile = %DATASETDIR%camspec/like_v6.2TNdust
-#beamfile = %DATASETDIR%camspec/beamfile_v6.2TN.dat
-#camspec_fiducial_cl=%DATASETDIR%/base_planck_lowl_lowLike_highL.bestfit_cl
-#camspec_fiducial_foregrounds=%DATASETDIR%/base_planck_lowl_lowLike_highL.camspec_foregrounds
+likefile = %DATASETDIR%camspec/like_v6.5Fdust
+camspec_fiducial_cl=%DATASETDIR%/base_v65F_lowl_lowLike_highL.bestfit_cl
+camspec_fiducial_foregrounds=%DATASETDIR%/base_v65F_lowl_lowLike_highL.camspec_foregrounds
 
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
 tszxcibfile = %DATASETDIR%camspec/sz_x_cib_template.dat
