revert camb/params.ini

--- a/camb/params.ini
+++ b/camb/params.ini
@@ -1,13 +1,13 @@
 #Parameters for CAMB
 
 #output_root is prefixed to output file names
-output_root = output/test
+output_root = test
 
 #What to do
-get_scalar_cls = F
+get_scalar_cls = T
 get_vector_cls = F
 get_tensor_cls = F
-get_transfer   = T
+get_transfer   = F
 
 #if do_lensing then scalar_output_file contains additional columns of l^4 C_l^{pp} and l^3 C_l^{pT}
 #where p is the projected potential. Output lensed CMB Culs (without tensors) are in lensed_output_file below.
