Antony fixes for generic sampler and un-named parameter support

--- a/params_generic.ini
+++ b/params_generic.ini
@@ -1,24 +1,41 @@
-#Sample parameters for cosmomc in default parameterization
+#Sample parameters for cosmomc used as a generic sampler
+
+#Folder where files (chains, checkpoints, etc.) are stored
+root_dir = chains/
 
 #Root name for files produced
 file_root = test
 
+#action = 0, to MCMC, action=1, postprocess .data file
+action = 0
+
+#parameter start center, min, max, start width, propose width
+#e.g. for 2D Gaussian
+
+#You can either use numbered parameters, or, usually better define a parameter name file as below
+#num_theory_params = 2
+#param1 = 0 -20 20 1 1
+#param2 = 0 -20 20 1 1
+
+#alternative using parameter names
+ParamNamesFile = generic_example.paramnames
+param[mypar1] = 0 -20 20 1 1
+param[mypar2] = 0 -20 20 1 1
+
+#Max samples to get
 samples = 100000
 
-delta_loglike = 2
-
+#Use vanilla MCMC here since no speed hierarchy defined
 sampling_method = 1
+use_fast_slow = F
 
 estimate_propose_matrix = F
+delta_loglike = 2
 
 propose_scale = 2.4
 
-
 #Temperature at which to Monte-Carlo
 temperature = 1
-
-#action = 0, to MCMC, action=1, postprocess .data file
-action = 0
 
 #Feedback level ( 2=lots,1=chatty,0=less,-1=minimal)
 feedback = 1
@@ -87,30 +104,4 @@ MPI_Max_R_ProposeUpdateNew = 30
 #if blank this is set from system clock
 rand_seed = 
 
-#parameter start center, min, max, start width, propose width
-#e.g. for 2D Gaussian
-param1 = 0 -20 20 1 1
-param2 = 0 -20 20 1 1
-param3 = 0 0 0 0 0
-param4 = 0 0 0 0 0
-param5 = 0 0 0 0 0
-param6 = 0 0 0 0 0
-param7 = 0 0 0 0 0
 
-
-##Unused parameters
-cmb_numdatasets = 0
-
-use_CMB = T
-use_HST = T
-use_mpk = F
-use_clusters = F
-use_BBN = F
-use_Age_Tophat_Prior = T
-use_SN = F
-use_min_zre = 0
-#CAMB parameters
-#If we are including tensors
-compute_tensors = F
-#Whether the CMB should be lensed (slows a lot unless also computing matter power)
-CMB_lensed = F
