Changes made to do the various camspec v65 runs

--- a/disttest.ini
+++ b/disttest.ini
@@ -1,7 +1,10 @@
-DEFAULT(batch1/getdist_common_batch1.ini)
+DEFAULT(batch2/getdist_common.ini)
 
-file_root = chains/test
+file_root = chains/v65FC
 ignore_rows=0.3
+
+compare_num = 1
+compare1 = base_v65F_lowl_lowLike
 
 plot_ext = py
 
