--- a/batch2/nonclik_v65CS.ini
+++ b/batch2/nonclik_v65CS.ini
@@ -7,7 +7,7 @@ camspec_beam_mcmc_num=1
 #beamfile = %DATASETDIR%camspec/v52/beamfile_v6.5F.dat
 
 pre_marged=F
-likefile = %DATASETDIR%camspec/like_v6.5FCdust
+likefile = %DATASETDIR%camspec/like_v6.5CSdust
 beamfile = %DATASETDIR%camspec/beamfile_v6.5F.dat
 
 sz143file = %DATASETDIR%camspec/tsz_143_eps0.50.dat
