--- a/test.ini
+++ b/test.ini
@@ -1,4 +1,4 @@
-DEFAULT(batch2/CAMspec_defaults.ini)
+DEFAULT(batch2/CAMspec_v65FC_nonclik.ini)
 DEFAULT(batch2/lowl.ini)
 DEFAULT(batch2/lowLike.ini)
 
@@ -6,7 +6,7 @@ DEFAULT(batch2/lowLike.ini)
 #DEFAULT(batch2/lensing.ini)
 
 #Other Likelihoods
-DEFAULT(batch2/BAO.ini)
+#DEFAULT(batch2/BAO.ini)
 #DEFAULT(batch2/HST.ini)
 #DEFAULT(batch2/Union.ini)
 #DEFAULT(batch2/SNLS.ini)
@@ -38,11 +38,11 @@ use_clik=T
 root_dir = chains/
 
 #Root name for files produced
-file_root=test
+file_root=v65FC
 action = 0
 
 #these are just small speedups for testing
-get_sigma8=F
+get_sigma8=T
 
 #Uncomment this if you don't want one 0.06eV neutrino by default
 #num_massive_neutrinos=3
