--- a/batch1/MPK.ini
+++ b/batch1/MPK.ini
@@ -1,8 +1,8 @@
-#if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
-nonlinear_mpk = T
-
 use_mpk = T
 
 #filenames for matter power spectrum datasets, incl twodf
+#To use HALOFIT for non-linear corrections (astro-ph/0207664),
+#set mpk_dataset_nonlinearN = T as in sdssDR4 example
 mpk_numdatasets = 1
 mpk_dataset1 = data/sdss_lrgDR4.dataset
+mpk_dataset_nonlinear1 = T
