move tests files to tests/inputs; importance

--- a/tests/inputs/fid.ini
+++ b/tests/inputs/fid.ini
@@ -14,7 +14,7 @@ DEFAULT(batch1/WiggleZ_MPK.ini)
 #DEFAULT(batch1/MPK.ini)
 
 #general settings
-DEFAULT(batch1/common_fid.ini)
+DEFAULT(common_fid.ini)
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
