Importance Sampling fixes; ini cleanups

--- a/batch1/CAMspec_defaults.ini
+++ b/batch1/CAMspec_defaults.ini
@@ -1,3 +1,6 @@
+use_CMB = T
+use_clik = T
+
 #clik likelihood file, when compiling with cliklike
 clik_data_camspec = %DATASETDIR%clik/CAMspec_v6.2TN_2013_02_26_dist.clik
 
