--- a/batch1/lowl.ini
+++ b/batch1/lowl.ini
@@ -1,5 +1,9 @@
+use_CMB = T
+use_clik = T
+
 #clik likelihood file, when compiling with cliklike
 
 clik_data_commander = %DATASETDIR%clik/commander_v4.1_lm49.clik
 clik_speed_commander = 0
 
+#lmax_computed_cl = 50
