--- a/batch1/likelihood_batch1.ini
+++ b/batch1/likelihood_batch1.ini
@@ -1,10 +1,7 @@
-use_CMB = T
-use_clik = T
-
 use_HST = F
 use_mpk = F
 use_SN = F
-use_BAO=F
+use_BAO= F
 
 use_lya = F
 use_clusters = F
@@ -13,11 +10,7 @@ use_min_zre = 0
 #filenames for matter power spectrum datasets, incl twodf
 mpk_numdatasets = 1
 mpk_dataset1 = %DATASETDIR%sdss_lrgDR4.dataset
-
-
-#if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
-#note lyman-alpha (lya) code assumes linear spectrum
-nonlinear_pk = F
+mpk_dataset_nonlinear1 = F 
 
 use_Age_Tophat_Prior = T
 
