--- a/batch1/lowLike.ini
+++ b/batch1/lowLike.ini
@@ -1,2 +1,7 @@
+use_CMB = T
+use_clik = T
+
 clik_data_lowlike = %DATASETDIR%clik/lowlike_v222.clik
 clik_speed_lowlike = -1
+
+#lmax_computed_cl = 150
