MPK Importance sampling fixes

--- a/batch1/WiggleZ_MPK.ini
+++ b/batch1/WiggleZ_MPK.ini
@@ -4,7 +4,7 @@ use_wigglez_mpk = T
 #if true, use HALOFIT for non-linear corrections (astro-ph/0207664).
 nonlinear_wigglez = T
 
-#use gigglez corrections; only set Use_gigglez = T if nonlinear_pk = T
+#use gigglez corrections; only set Use_gigglez = T if nonlinear_wigglez = T
 Use_gigglez = T
 
 #File with common Settings for all datasets
