Change MPK objects to Interpolation obects, compiles

--- a/test.ini
+++ b/test.ini
@@ -1,6 +1,6 @@
-DEFAULT(batch1/CAMspec_defaults.ini)
-DEFAULT(batch1/lowLike.ini)
-DEFAULT(batch1/lowl.ini)
+#DEFAULT(batch1/CAMspec_defaults.ini)
+#DEFAULT(batch1/lowLike.ini)
+#DEFAULT(batch1/lowl.ini)
 
 #planck lensing
 #DEFAULT(batch1/lensing.ini)
@@ -11,7 +11,7 @@ DEFAULT(batch1/BAO.ini)
 #DEFAULT(batch1/Union.ini)
 #DEFAULT(batch1/SNLS.ini)
 #DEFAULT(batch1/WiggleZ_MPK.ini)
-#DEFAULT(batch1/MPK.ini)
+DEFAULT(batch1/MPK.ini)
 
 #general settings
 DEFAULT(batch1/common_batch1.ini)
@@ -22,7 +22,7 @@ MPI_Max_R_ProposeUpdate = 30
 propose_matrix= planck_covmats/base_planck_lowl_lowLike.covmat
 
 start_at_bestfit =F
-feedback=1
+feedback=3
 use_fast_slow = T
 
 #sampling_method=7 is a new fast-slow scheme good for Planck
