--- a/tests/inputs/common_fid.ini
+++ b/tests/inputs/common_fid.ini
@@ -6,8 +6,8 @@ local_dir = %LOCALDIR%
 #directory, e.g. window functions in directory windows under data_dir
 data_dir = %LOCALDIR%data/
 
-INCLUDE(likelihood_fid.ini)
-INCLUDE(params_CMB_fid.ini)
+INCLUDE(tests/inputs/likelihood_fid.ini)
+INCLUDE(tests/inputs/params_CMB_fid.ini)
 
 #Feedback level ( 2=lots,1=chatty,0=none)
 feedback = 3
