--- a/tests/inputs/fid.ini
+++ b/tests/inputs/fid.ini
@@ -1,4 +1,4 @@
-#DEFAULT(tests/inputs/CAMspec_fid.ini)
+#DEFAULT(CAMspec_fid.ini)
 #DEFAULT(batch1/lowl.ini)
 #DEFAULT(batch1/lowLike.ini)
 
@@ -14,7 +14,7 @@ DEFAULT(batch1/WiggleZ_MPK.ini)
 #DEFAULT(batch1/MPK.ini)
 
 #general settings
-DEFAULT(tests/inputs/common_fid.ini)
+DEFAULT(common_fid.ini)
 
 #high for new runs
 MPI_Max_R_ProposeUpdate = 30
